--- a/css/base.css
+++ b/css/base.css
@@ -8,6 +8,24 @@ body {
     text-align: center;
 }
 
-.bold{
+.bold {
     font-weight: bolder;
+}
+
+.error-message {
+    background-color: #ff4f3f;
+    opacity: 0.8;
+    padding: 10px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    font-size: 0.8em;
+    font-weight: bold;
+    border-radius: 10px;
+}
+
+.hidden{
+    height: 0;
+    margin: 0;
+    padding: 0;
+    visibility: hidden;
 }
