--- a/css/registration.css
+++ b/css/registration.css
@@ -1,4 +1,4 @@
-/* The styling for the login page*/
+/* The styling for the login and registration pages*/
 .form {
     position: relative;
     z-index: 1;
@@ -32,6 +32,7 @@ a:link {
     text-decoration: none;
     color: #6caf3d;
 }
-a:hover{
+
+a:hover {
     color: #4CAF50;
 }
