--- a/css/registration.css
+++ b/css/registration.css
@@ -20,7 +20,7 @@
 
 .form button {
     text-transform: uppercase;
-    background: #4CAF50;
+    background: #c20e0e;
     width: 100%;
     border: 0;
     margin: 0 0 15px;
@@ -34,5 +34,5 @@ a:link {
 }
 
 a:hover {
-    color: #4CAF50;
+    color: #c2244b;
 }
