--- a/css/profile.css
+++ b/css/profile.css
@@ -137,3 +137,11 @@ body {
     font-size: 1.5em;
     color: #000000;
 }
+
+button {
+    background-color: #4CAF50;
+    border: 1px solid green;
+    color: white;
+    padding: 10px 32px;
+    font-size: 16px;
+}
