--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -45,3 +45,7 @@
         margin-bottom: 20px;
     }
 }
+
+.achievement-warning{
+    background-color: #6caf3d; padding: 1rem;margin: 3rem;border-radius: 10px;text-align: center;
+}
