--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,20 +1,20 @@
-.hidden{
-      display: none;
+.hidden {
+    display: none;
 }
 
-.tab{
+.tab {
     padding-left: 2em;
 }
 
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
     margin-bottom: 15px;
     /*width: 40%;*/
 }
 
 .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.6);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.6);
 }
 
 .container {
@@ -29,7 +29,9 @@
     padding: 0 10px;
 }
 
-.row {margin: 0 -15px;}
+.row {
+    margin: 0 -15px;
+}
 
 /* Clear floats after the columns */
 .row:after {
@@ -46,6 +48,14 @@
     }
 }
 
-.achievement-warning{
-    background-color: #6caf3d; padding: 1rem;margin: 3rem;border-radius: 10px;text-align: center;
+.achievement-warning {
+    background-color: #6caf3d;
+    padding: 1rem;
+    margin: 3rem;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.small-image {
+    max-height: 1rem;
 }
