--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@
     --background-color: #000000;
 }
 
-.hidden{
+.hidden {
     display: none !important;
 }
 
@@ -23,8 +23,8 @@ header {
     background-image: url("../images/header-background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-	overflow: hidden;
-	box-shadow: inset 0 0 10px #000000;
+    overflow: hidden;
+    box-shadow: inset 0 0 10px #000000;
 
     transition: min-height 1s ease-in-out;
     -webkit-transition: min-height 1s ease-in-out;
@@ -37,9 +37,9 @@ header {
 }
 
 .container > h1 {
-	margin: 0;
-	padding: 1em 0 1em 0;
-	text-align: center;
+    margin: 0;
+    padding: 1em 0 1em 0;
+    text-align: center;
     color: var(--main-color);
     text-transform: uppercase;
 
@@ -50,9 +50,9 @@ header {
 }
 
 .container > h3 {
-	margin: 0;
-	padding: 1em 0 1em 0;
-	text-align: center;
+    margin: 0;
+    padding: 1em 0 1em 0;
+    text-align: center;
 
     transition: font-size .5s ease-in-out;
     -webkit-transition: font-size .5s ease-in-out;
@@ -247,7 +247,7 @@ nav li a:hover {
 }
 
 .scroll-button svg {
-    display:inline-block;
+    display: inline-block;
     justify-content: center;
     transform: rotate(90deg) scale(1);
     fill: var(--offset-color);
@@ -263,30 +263,30 @@ nav li a:hover {
 }
 
 @keyframes pulse {
-  0% {
-    box-shadow: 0 0 0 0 rgba(255,255,255, 0.25);
-    -moz-box-shadow: 0 0 0 0 rgba(255,255,255, 0.25);
-  }
-  70% {
-      box-shadow: 0 0 0 10px rgba(255,255,255, 0);
-      -moz-box-shadow: 0 0 0 10px rgba(255,255,255, 0);
-  }
-  100% {
-      box-shadow: 0 0 0 0 rgba(255,255,255, 0);
-      -moz-box-shadow: 0 0 0 0 rgba(255,255,255, 0);
-  }
+    0% {
+        box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.25);
+        -moz-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.25);
+    }
+    70% {
+        box-shadow: 0 0 0 10px rgba(255, 255, 255, 0);
+        -moz-box-shadow: 0 0 0 10px rgba(255, 255, 255, 0);
+    }
+    100% {
+        box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+        -moz-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+    }
 }
 
 @-webkit-keyframes pulse {
-  0% {
-    -webkit-box-shadow: 0 0 0 0 rgba(255,255,255, 0.25);
-  }
-  70% {
-      -webkit-box-shadow: 0 0 0 10px  rgba(255,255,255, 0);
-  }
-  100% {
-      -webkit-box-shadow: 0 0 0 0  rgba(255,255,255, 0);
-  }
+    0% {
+        -webkit-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.25);
+    }
+    70% {
+        -webkit-box-shadow: 0 0 0 10px rgba(255, 255, 255, 0);
+    }
+    100% {
+        -webkit-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+    }
 }
 
 .features-wrapper {
@@ -334,6 +334,10 @@ footer {
 }
 
 #trademark {
-	width: 100%;
-	text-align: center;
+    width: 100%;
+    text-align: center;
+}
+
+.center-text {
+    text-align: center;
 }
