--- a/css/profile.css
+++ b/css/profile.css
@@ -45,6 +45,29 @@ body {
     margin: 1em 1em 1em 0em;
 }
 
+.simple-button {
+    border: 1px solid;
+    border-radius: 2px;
+    color: #000000;
+    background-color: inherit;
+    padding: 0.25em 0.75em 0.25em 0.75em;
+}
+
+.simple-button:hover {
+    background-color: #e3e3e3;
+}
+
+#edit-profile-link
+{
+    text-decoration: none;
+    color: #000000;
+}
+
+#edit-profile-button
+{
+    margin: 1em;
+}
+
 .center {
     display: block;
     margin-left: auto;
