--- a/css/profile.css
+++ b/css/profile.css
@@ -45,6 +45,11 @@ body {
     margin: 1em 1em 1em 0em;
 }
 
+.profile-nav a {
+    text-decoration: none;
+    color: #000000;
+}
+
 .simple-button {
     border: 1px solid;
     border-radius: 2px;
