--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -183,8 +183,28 @@
     position: relative;
     height: 250px;
     width: 90%;
+    position: relative;
+    height: 40vh;
+    width: 60vw
 }
 
 .chart-wrapper {
     display: block;
+}
+
+#totalWater {
+    color: black;
+}
+
+.achievement-picture {
+    width: 100%;
+    height: 100%;
+}
+
+.left-margin {
+    margin-left: 55%;
+}
+
+.dodgerblue-text {
+    color: dodgerblue;
 }
