--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -202,3 +202,31 @@
     background-color: #5ce65c !important;
     border-color: #3f9e3f !important;
 }
+
+#calendar {
+    height: 1400px;
+    display: block;
+    padding: 2em;
+    margin: auto 0 auto 0;
+}
+
+.small-circular-button {
+    border-radius: 50%;
+    border-color: #d6d6d6;
+    height: 3em !important;
+    width: 3em !important;
+    padding: 0;
+    background-color: inherit;
+    fill: #8c8c8c;
+    text-align: center;
+}
+
+.small-circular-button:hover {
+    border-color: #ababab;
+}
+
+.small-circular-button svg {
+    width: 1.5em;
+    display: block;
+    margin: 0 auto;
+}
